--- a/mainapp/templates/mainapp/contact.html
+++ b/mainapp/templates/mainapp/contact.html
@@ -7,6 +7,7 @@
 			<h2>Контакты</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat aut, quod corrupti molestias et nihil numquam culpa. Autem est tempora sunt ipsa soluta illo, atque, porro nulla, maiores, ullam neque.</p>
 		</div>
-	</main> <!-- End Content --
+	</main> 
+<!-- End Content -->
 
 {% endblock %}
