запуск script.js

--- a/mainapp/templates/mainapp/includes/modal-authorization.html
+++ b/mainapp/templates/mainapp/includes/modal-authorization.html
@@ -20,7 +20,7 @@
 						<label for="" class="form-label-sm">Ваш пароль</label>
 						<input type="password" class="form-control form-control-sm" placeholder="Пароль">
 					</div>
-					<a href="#" class="text-primary" data-toggle="modal" data-target="#passRecoveryModal">Забыли пароль?</a>
+					<a href="#" id="showRecovery" class="text-primary" data-toggle="modal" data-target="#passRecoveryModal">Забыли пароль?</a>
 				</div>
 				<div class="modal-footer">
 					<button type="submit" class="btn btn-primary btn-sm"><i class="fa fa-sign-in mr-2"></i>Войти</button>
@@ -60,3 +60,5 @@
 		</div>
 	</div>
 </div>
+
+
