--- a/mainapp/templates/mainapp/docs.html
+++ b/mainapp/templates/mainapp/docs.html
@@ -1,14 +1,12 @@
 {% extends 'mainapp/base.html' %}
 
 {% block content %}
-
 	<!-- Content -->
 	<main class="pt-4">
 		<div class="container">
-			<h2>Hello, world!</h2>
+			<h2>Документы</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat aut, quod corrupti molestias et nihil numquam culpa. Autem est tempora sunt ipsa soluta illo, atque, porro nulla, maiores, ullam neque.</p>
 		</div>
-	</main> <!-- End Content -->
-
-	
+	</main> 
+<!-- End Content -->
 {% endblock %}
