--- a/mainapp/templates/mainapp/account.html
+++ b/mainapp/templates/mainapp/account.html
@@ -4,7 +4,30 @@
 	<!-- Content -->
 	<main class="pt-4">
 		<div class="container">
-			<h2>Личный кабинет</h2>
+			<nav aria-label="breadcrumb">
+				<ol class="breadcrumb">
+					<li class="breadcrumb-item"><a href="{% url 'index' %}">Главная</a></li>
+					<li class="breadcrumb-item active" aria-current="page">Личный кабинет подразделения</li>
+				</ol>
+			</nav>
+
+			<h4 class="title-page">Личный кабинет</h4>
+
+			<ul class="nav nav-tabs mb-3">
+				<li class="nav-item">
+					<a class="nav-link active" href="#">Новости</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">О подразделении</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Члены подразделения</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Конференции</a>
+				</li>
+			</ul>
+
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat aut, quod corrupti molestias et nihil numquam culpa. Autem est tempora sunt ipsa soluta illo, atque, porro nulla, maiores, ullam neque.</p>
 		</div>
 	</main> 
