--- a/mainapp/templates/mainapp/includes/header.html
+++ b/mainapp/templates/mainapp/includes/header.html
@@ -15,19 +15,19 @@
 								<a class="nav-link" href="{% url 'index' %}">Главная <span class="sr-only">(current)</span></a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">О РСПС</a>
+								<a class="nav-link" href="{% url 'about' %}">О РСПС</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">Новости</a>
+								<a class="nav-link" href="{% url 'news' %}">Новости</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">Документы</a>
+								<a class="nav-link" href="{% url 'docs' %}">Документы</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">Региональные отделения</a>
+								<a class="nav-link" href="{% url 'regionalOffice' %}">Региональные отделения</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">Одобрено РСПС</a>
+								<a class="nav-link" href="{% url 'approved' %}">Одобрено РСПС</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="{% url 'contact' %}">Контакты</a>
