--- a/mainapp/templates/mainapp/account.html
+++ b/mainapp/templates/mainapp/account.html
@@ -102,13 +102,23 @@
 													<th>ФИО</th>
 													<th>Место работы / должность</th>
 													<th>Телефон / Email</th>
-													<th>Членство в РСПС</th>
+													<th>Членство РСПС</th>
 													<th>Действия</th>
 												</tr>
 											</thead>
 											<tbody>
 												<tr>
 													<td>Царьков Андрей Васильевич</td>
+													<td>ООО "Аттестационный центр Калужской области", ген.директор</td>
+													<td>+7(4842) 56-24-66, andrey.tsarkov@mail.ru</td>
+													<td>да</td>
+													<td class="del-edit">
+														<a href="#" class="mr-3 text-primary" title="Удалить"><i class="fa fa-times"></i></a>
+														<a href="#Modal-editChlenKonf" class="text-primary" title="Изменить"><i class="fa fa-pencil"></i></a>
+													</td>
+												</tr>
+												<tr>
+													<td>КРАСАВЧИК!!!</td>
 													<td>ООО "Аттестационный центр Калужской области", ген.директор</td>
 													<td>+7(4842) 56-24-66, andrey.tsarkov@mail.ru</td>
 													<td>да</td>
