--- a/mainapp/templates/mainapp/includes/modal-authorization.html
+++ b/mainapp/templates/mainapp/includes/modal-authorization.html
@@ -42,7 +42,10 @@
 				</div>
 				<form>
 					<div class="modal-body">
-
+						<div class="form-group">
+							<label for="" class="form-label-sm">На указанный Email будет отправлена ссылка с активацией нового пароля</label>
+							<input type="email" class="form-control form-control-sm" placeholder="укажите Email">
+						</div>
 					</div>
 					<div class="modal-footer">
 						<button type="submit" class="btn btn-primary btn-sm">Отправить</button>
