--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -34,6 +34,7 @@
 	{% include 'mainapp/includes/footer.html' %}
 
 	{% include 'mainapp/includes/modal-authorization.html' %}
+	{% include 'mainapp/includes/modal-participantConf.html' %}
 
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
