--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,4 @@
 /* Style change Bootstrap */
-.text-primary {
-  color: #086da3 !important; }
-
 .btn-primary {
   background-color: #086da3 !important; }
   .btn-primary:hover {
@@ -14,7 +11,11 @@
     background-color: #157bb1 !important;
     color: #fff !important; }
 
-.btn-link {
+.page-item.active .page-link {
+  background-color: #086da3 !important;
+  color: #fff !important; }
+
+.btn-link, .page-link, .text-primary {
   color: #086da3 !important; }
 
 .breadcrumb {
@@ -27,6 +28,9 @@
 
 .form-check-input {
   margin-top: 0.2rem; }
+
+.modal-body .form-check-input {
+  margin-top: 0.3rem; }
 
 /* End */
 body {
@@ -138,11 +142,6 @@ footer hr {
   margin-bottom: 0; }
 
 /* End Footer */
-/* Form */
-/* .form-label-sm {
-
-	} */
-/* End Form */
 /* Modal */
 .modal-footer {
   -webkit-box-pack: justify;
@@ -212,11 +211,11 @@ main .table-list {
     background: -webkit-gradient(linear, left top, left bottom, color-stop(1%, #fefefe), to(#f2f7f9));
     background: linear-gradient(to bottom, #fefefe 1%, #f2f7f9 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fefefe', endColorstr='#f2f7f9',GradientType=0 ); }
-    main .table-list td a {
-      font-weight: bold; }
-      main .table-list td a:hover {
-        color: #007bff !important; }
-    main .table-list td i {
+  main .table-list .btn-action {
+    font-weight: bold; }
+    main .table-list .btn-action:hover {
+      color: #007bff !important; }
+    main .table-list .btn-action i {
       font-size: 1rem; }
 
 main .table-list.table-internal-list th {
@@ -225,7 +224,7 @@ main .table-list.table-internal-list th {
   border-bottom: solid 1px #e5e5e5; }
 
 main .table-list.table-internal-list td {
-  font-size: 0.7rem;
+  /* font-size: 0.7rem; */
   padding: 10px 15px;
   border-bottom: solid 1px #e5e5e5;
   background: #fefefe !important;
