--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -35,6 +35,7 @@
 
 	{% include 'mainapp/includes/modal-authorization.html' %}
 	{% include 'mainapp/includes/modal-participantConf.html' %}
+	{% include 'mainapp/includes/modal-regConference.html' %}
 
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
